--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "datatables.net-responsive-dt": "^3.0.3",
         "jquery": "^3.7.1",
         "remixicon": "^4.3.0",
+        "select2": "^4.1.0-rc.0",
         "sweetalert2": "^11.14.4"
     }
 }
