--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "jquery": "^3.7.1",
         "remixicon": "^4.3.0",
         "select2": "^4.1.0-rc.0",
+        "select2-bootstrap-5-theme": "^1.3.0",
         "sweetalert2": "^11.14.4"
     }
 }
