--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     },
     "dependencies": {
         "chart.js": "^4.5.0",
-        "datatables.net-dt": "^2.1.8",
+        "datatables.net-bs5": "^2.3.3",
         "datatables.net-responsive": "^3.0.3",
-        "datatables.net-responsive-dt": "^3.0.3",
+        "datatables.net-responsive-bs5": "^3.0.6",
         "jquery": "^3.7.1",
         "remixicon": "^4.3.0",
         "select2": "^4.1.0-rc.0",
