--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
         "datatables.net-responsive": "^3.0.3",
         "datatables.net-responsive-bs5": "^3.0.6",
         "jquery": "^3.7.1",
+        "prosemirror-example-setup": "^1.2.3",
+        "prosemirror-model": "^1.25.4",
+        "prosemirror-schema-basic": "^1.2.4",
+        "prosemirror-state": "^1.4.4",
+        "prosemirror-view": "^1.41.3",
         "remixicon": "^4.3.0",
         "select2": "^4.1.0-rc.0",
         "select2-bootstrap-5-theme": "^1.3.0",
